# pattern

./: .gitignore  CMakeLists.txt  README.md  main.cpp  simple_main.cpp
include/behavioral/: chain_of_responsibility.h  command.h  observer.h  state.h  strategy.h
include/creational/: abstract_factory.h  builder.h  factory_method.h  prototype.h  singleton.h
include/structural/: adapter.h  bridge.h  composite.h  decorator.h  facade.h  flyweight.h  proxy.h
